# schema/openapi/openapi.yaml
@@ -1998,10 +1998,6 @@ components:
         id:
           type: string
           format: uuid
-        company_id:
-          nullable: true
-          type: string
-          format: uuid
         from_currency:
           type: string
           maxLength: 3
@@ -2049,10 +2045,6 @@ components:
         - rate_type
         - metadata
       properties:
-        company_id:
-          nullable: true
-          type: string
-          format: uuid
         from_currency:
           type: string
           maxLength: 3
@@ -2087,10 +2079,6 @@ components:
         - rate_type
         - metadata
       properties:
-        company_id:
-          nullable: true
-          type: string
-          format: uuid
         from_currency:
           type: string
           maxLength: 3
@@ -2118,10 +2106,6 @@ components:
     PatchCurrencyExchangeRequest:
       type: object
       properties:
-        company_id:
-          nullable: true
-          type: string
-          format: uuid
         from_currency:
           type: string
           maxLength: 3
